Add a.txt example file and modify the StubHost to use it.